k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db-deployment
  labels:
    app: projet-final
    tier: db
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projet-final
      tier: db
  template:
    metadata:
      labels:
        app: projet-final
        tier: db
        version: v1
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  labels:
    app: projet-final
    tier: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: projet-final
    tier: db
