k8s/front-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: projet-final
    tier: front
    version: v1 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projet-final
      tier: front
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: projet-final
        tier: front
        version: v1
    spec:
      containers:
      - name: frontend-spa
        image: projet-final-front:latest
        ports:
        - containerPort: 80 
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
            
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: projet-final
    tier: front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80 
  selector:
    app: projet-final
    tier: front
