k8s/front-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  labels:
    app: projet-final
    tier: front
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service 
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 80
